--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,13 @@
     <input type="text" id="search-bar" name="input" placeholder="Search images..." required />
     <button class="search-btn" type="submit">Search</button>
   </form>
-  
-  <span class="loader"></span>
 
   <div id="gallery"></div>
+
+  <span class="loader"></span>
   
+  <div class="load-more-container"><button class="load-more-btn" type="button" style="display: none;">Load more</button></div>
+
   <script type="module" src="./main.js"></script>
 </body>
 
